--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
 		   <a href="https://twitter.com/annyadahmani">Twitter</a> &nbsp/&nbsp
                 <a href="__________">CV</a> &nbsp/&nbsp
            
-                <a href="_________">Google Scholar</a> &nbsp/&nbsp
+                <a href="_________">Research</a> &nbsp/&nbsp
                 
                 <a href="https://github.com/annyadahmani/">Github</a>
               </p>
