--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
               <p>
                 My research focuses on ____________
               </p>
+		    <br>
+		    <br>
 		    <p>
-		    </p>
-		    <p>
-			    Below are some recent projects I've worked on:
+			    Here are some recent projects I've worked on:
 		    </p>
 		    
 		    <p>
