--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am broadly interested in how children make decisions, reason, and learn in our complex social world. My research focuses on social and causal learning and using computational models to better understand human social cognition. How can we leverage computational models and experimental approaches to better understand human social cognition? How can we build artificial intelligence that draws directly from human (from childhood to adulthood) intelligent cognition? <br><br>Keywords: developmental psychology, cognitive psychology, compuational cognition, social cognition.
+                I am broadly interested in how children make decisions, reason, and learn in our complex social world. My research focuses on social and causal learning and using computational models to better understand human social cognition. How can we leverage computational models and experimental approaches to better understand human social cognition? How can we build artificial intelligence that draws directly from human (from childhood to adulthood) intelligent cognition? <br><br>Reserach interests: developmental psychology, cognitive psychology, compuational approaches, social cognition, mental representation.
 	
 
               </p>
-		    <br>
 		    <br>
 		    <p>
 			    Here are some recent projects I've worked on:
