--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
               <p style="text-align:center">
                 <a href="mailto:adahmani@berkeley.edu">Email</a> &nbsp/&nbsp
 		   <a href="https://twitter.com/annyadahmani">Twitter</a> &nbsp/&nbsp
-                <a href="__________">CV</a> &nbsp/&nbsp
+                <a href="data/cv.pdf">CV</a> &nbsp/&nbsp
                 
-                <a href="https://github.com/annyadahmani/">Github</a>
+              
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
