--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                Children's ability to learn so much about our world so rapidly and flexibly is ubiquitous. My research focuses on leveraging experimental and computational approaches to better understand human social cognition. How can we build artificial intelligence that draws directly from human (from childhood to adulthood) intelligent cognition? Why is this development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: developmental psychology, cognitive psychology, compuational approaches, social cognition, mental representation.
+                Children's ability to learn so much about the physical and social world so rapidly and flexibly is ubiquitous. My research focuses on leveraging experimental and computational approaches to better understand human social cognition. How can we build artificial intelligence that draws directly from human (from childhood to adulthood) intelligent cognition? Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: developmental psychology, cognitive psychology, compuational approaches, social cognition, mental representation.
 	
 
               </p>
