--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                Children's ability to learn so much about the physical and social world so rapidly and flexibly is ubiquitous. My research focuses on leveraging experimental and computational approaches to better understand the link between childhood, learning, and exploration. How can we build artificial intelligence that draws directly from human (particularly children's) intelligent cognition? Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: cognitive development, compuational approaches, social cognition, mental representation, exploration.
+                Children's ability to learn so much about the physical and social world so rapidly and flexibly is ubiquitous. My research focuses on leveraging experimental and computational approaches to better understand the link between childhood, learning, and exploration. How can we build artificial intelligence that draws directly from human (particularly children's) intelligent cognition? Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: cognitive development, computational approaches, social cognition, mental representation, learning.
 	
 
               </p>
