--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/Annya_Dahmani_circle.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Annya_Dahmani_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/AnnyaDahmani_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/AnnyaDahmani_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
