--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Annya Dahmani</name>
               </p>
               <p>
-		       I am a first year PhD student in Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik.</a> 
+		       I am a first year PhD student in the Department of Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik.</a> 
 		      
               </p>
               <p>
@@ -51,7 +51,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                Humans, and in particular children, are able to learn so much about the physical and social world so rapidly and flexibly. 
+                Humans, particularly children, are able to learn so much about the physical and social world so rapidly and flexibly. 
 		      My research focuses on leveraging experimental and computational approaches to better understand the link between learning 
 		      and exploration. I am also interested in how we can build artificial intelligence that draws directly from human cognition. Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: cognitive development, computational cognitive science, exploration, learning, artificial intelligence.
 	
