--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
               <p style="text-align:center">
                 <a href="mailto:adahmani@berkeley.edu">Email</a> &nbsp/&nbsp
 		   <a href="https://twitter.com/annyadahmani">Twitter</a> &nbsp/&nbsp
-                <a href="">Updating CV</a> &nbsp&nbsp
+                <a href="https://drive.google.com/file/d/10Eb4ZZmZxBlG_Vxi4WoMAyxb5hbrMXLc/view?usp=sharing">CV</a> &nbsp&nbsp
                 
               
               </p>
