--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <name>Annya Dahmani</name>
               </p>
               <p>
-		       I am a first year PhD student in the Department of Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik.</a> 
+		       I am a first year PhD student in the Department of Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik. </a> 
 		      
               </p>
               <p>
                I received my BS in Cognitive Science 
          with a Specialization in Computing from UCLA in June 2022 where I graduated with Departmental Honors and Cum Laude. At UCLA,
-         I worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab </a> and <a href="https://www.psych.ucla.edu/faculty-page/hongjing/"> Hongjing Lu </a> in <a href="https://cvl.psych.ucla.edu/"> The Computational Vision and Learning Lab</a>. I completed my senior honors thesis in the <a href="https://www.psych.ucla.edu/undergraduate/special-programs-and-events/departmental-honors-program/"> Psychology Departmental Honors Program </a> with Tao Gao as my faculty sponsor. I was also a part of UCLA's <a href="https://www.psych.ucla.edu/undergraduate/special-programs-and-events/psychology-research-opportunities-programs/"> Psychology Research Opportunity Program (PROPS) </a> where I was advised by <a href= "https://www.psych.ucla.edu/faculty-page/pcheng/"> Patricia Cheng</a>. Throughout my time at UCLA I was funded by the Dean's Award for Life Science Research.
-I was a Summer Intern in 2021 at Yale University working with <a href="https://psychology.yale.edu/people/yarrow-dunham"> Yarrow Dunham </a> in the <a href="http://www.socialcogdev.com/"> Social Cognitive Development Lab </a> and <a href="https://psychology.yale.edu/people/julian-jara-ettinger"> Julian Jara-Ettinger </a> in the <a href= "https://compdevlab.yale.edu/"> Computational Social Cognition Lab</a>.
+         I worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab </a> and <a href="https://www.psych.ucla.edu/faculty-page/hongjing/"> Hongjing Lu </a> in <a href="https://cvl.psych.ucla.edu/"> The Computational Vision and Learning Lab</a>. I completed my senior honors thesis in the <a href="https://www.psych.ucla.edu/undergraduate/special-programs-and-events/departmental-honors-program/"> Psychology Departmental Honors Program </a> with Tao Gao as my faculty sponsor. I was also a part of UCLA's <a href="https://www.psych.ucla.edu/undergraduate/special-programs-and-events/psychology-research-opportunities-programs/"> Psychology Research Opportunity Program (PROPS) </a> where I was advised by <a href= "https://www.psych.ucla.edu/faculty-page/pcheng/"> Patricia Cheng</a>. I was funded by the Dean's Award for Life Science Research during my time at UCLA.
+I also had the opportunity to be a Summer Intern in 2021 at Yale University working with <a href="https://psychology.yale.edu/people/yarrow-dunham"> Yarrow Dunham </a> in the <a href="http://www.socialcogdev.com/"> Social Cognitive Development Lab </a> and <a href="https://psychology.yale.edu/people/julian-jara-ettinger"> Julian Jara-Ettinger </a> in the <a href= "https://compdevlab.yale.edu/"> Computational Social Cognition Lab</a>.
               </p>
 	<p>
 		You can email me at adahmani [at] berkeley.edu
@@ -63,7 +63,7 @@ I was a Summer Intern in 2021 at Yale University working with <a href="https://p
 	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Website in progress.</heading>
+              <heading>Website is still in progress.</heading>
               <p>
               </p>
             </td>
