--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
               <heading>Research</heading>
               <p>
                 My research is at the intersection of cognitive science and artificial intelligence. Humans, particularly children, are able to learn so much about the physical and social world so rapidly and flexibly.  
-		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? <br><br>Reserach interests: computational cognitive science, exploration, learning, theory of mind, artificial intelligence, cognitive development.
+		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? 
+		      
+		      
+		      <br><br>Reserach keywords: 
+		      * computational cognitive science
+		      * exploration, learning, theory of mind
+		      * artificial intelligence
+		      * cognitive development
 	
             </td>
           </tr>
