--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
 		      
 		      
 		      <br><br>Reserach keywords: 
-		      * computational cognitive science
-		      * exploration, learning, theory of mind
-		      * artificial intelligence
-		      * cognitive development
+		      <ul>
+		      <li>computational cognitive science</li>
+		      <li>exploration, learning, theory of mind</li>
+		      <li>artificial intelligence</li>
+		      <li>cognitive development</li>
+	</ul>
 	
             </td>
           </tr>
