--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		       I am a second year PhD student in the Department of Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am in the Cognition and Developmental areas with a <a href="https://cogsci.berkeley.edu/cogsci.berkeley.edu/graduatedesignatedemphasis"> Designated Emphasis in Cognitive Science.</a> I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
 		      
               </p>
+		    <p> I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">DoD NDSEG</a> and a Chancellor’s Fellowship from Berkeley.</p>
               <p>
                I received my BS in Cognitive Science 
          with a Specialization in Computing from UCLA in June 2022 where I graduated with Departmental Honors and Cum Laude. At UCLA,
