--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research is at the intersection of cognitive science and artificial intelligence. Humans, particularly children, are able to learn so much about the physical and social world so rapidly and flexibly.  
-		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Why is the development of Theory of Mind so crucial to our understanding of what makes humans social beings? How can we build mentalizing machines? 
+                My research is at the intersection of cognitive science and artificial intelligence. Humans, particularly children, are able to learn so much about the physical and social world so rapidly and flexibly. However, there are certain things that very young human children can do that are still very far from anything that current state-of-the-art AI can do. 
+		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representing others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. How do environmental cues (for example, safety, controllability, predictability) influence how an agent may explore in, learn from, and generate goals in their enviornment? 
 		      
 		      
 		      <br><br>Reserach keywords: 
