--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
 		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Recently, I have been focusing on how environmental cues (for example, safety, controllability, predictability) influence how an agent may explore, learn, and generate goals in their environment. 
 		      
 		      
-		      <br><br>Reserach keywords: 
+		      <br><br>Research keywords: 
 		      <ul>
 		      <li>computational cognitive science</li>
 		      <li>exploration, learning, theory of mind</li>
