--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
 		      
 		      <br><br>Research keywords: 
 		      <ul>
-		      <li>computational cognitive science</li>
+		      <li>cognitive science</li>
 		      <li>exploration, learning, theory of mind</li>
 		      <li>artificial intelligence</li>
 		      <li>cognitive development</li>
