--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
 		      <br><br>Research keywords: 
 		      <ul>
 		      <li>cognitive science</li>
-		      <li>exploration, learning, theory of mind</li>
+		      <li>exploration, learning, reasoning</li>
 		      <li>artificial intelligence</li>
 		      <li>cognitive development</li>
 	</ul>
