--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
               <heading>Research</heading>
               <p>
                 My research is at the intersection of cognitive science and artificial intelligence. Humans, particularly children, are able to learn so much about the physical and social world so rapidly and flexibly. However, there are certain things that very young human children can do that are still very far from anything that current state-of-the-art AI can do. 
-		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Recently, I have been focusing on how environmental cues (for example, safety, controllability, predictability) influence how an agent may explore, learn, and generate goals in their environment. 
+		      My research focuses on leveraging experimental and computational approaches to better understand learning, exploration, and representations of others. I am especially interested in how we can build artificial intelligence that draws directly from human cognition. Recently, I have been focusing on how environmental cues (for example, safety, controllability, predictability) influence how an agent may explore, learn, and generate goals in its environment. 
 		      
 		      
 		      <br><br>Research keywords: 
