--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@ I also had the opportunity to be a Summer Intern in 2021 at Yale University work
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-               My research is at the intersection of cognitive science and artificial intelligence. I am especially interested in how we can build artificial intelligence that draws directly from human cognition, particularly in the areas of learning, decision making, and reasoning. 
-<br>
+My research is at the intersection of cognitive science and artificial intelligence. I am especially interested in how we can build artificial intelligence that draws directly from human cognition, particularly in the areas of learning, decision making, and reasoning. 
 I take inspiration from decades of research showing how humans, specifically children, are able to learn so much about the physical and social world so rapidly and flexibly. Yet, there are certain things that young children can do that are still very far from anything that current state-of-the-art AI can do. 
-<br>
 During my PhD, I aim to leverage experimental and computational approaches to better understand the connection between learning, decision making, and reasoning. Recently, I have been focusing on projects centered on automated curriculum learning in humans and machines. Additionally, I am exploring how environmental cues (for example, safety, controllability, predictability) influence an agent’s exploration, learning, and goal generation within its environment. 
 <br>
-Please reach out to me - happy to connect!
+Feel free to reach out to me - happy to connect!
+
 
 
 		      <br><br>Research keywords: 
