--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Feel free to reach out to me - happy to connect!
 		      <li>cognitive science</li>
 		      <li>exploration, learning, reasoning</li>
 		      <li>artificial intelligence</li>
-		      <li>cognitive development</li>
+		      <li>cognition in humans and machines</li>
 	</ul>
 	
             </td>
