--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-My research is at the intersection of cognitive science and artificial intelligence. I am especially interested in how we can build artificial intelligence that draws directly from human cognition, particularly in the areas of learning, exploration, and reasoning. 
-I take inspiration from decades of research showing how humans, specifically children, are able to learn so much about the physical and social world so rapidly and flexibly. Yet, there are certain things that young children can do that are still very far from anything that current state-of-the-art AI can do. 
-During my PhD, I aim to leverage experimental and computational approaches to better understand the connection between learning, decision making, and reasoning. Recently, I have been focusing on projects centered on automated curriculum learning in humans and machines. I am also exploring how environmental cues (for example, time horizon, safety, controllability, predictability) influence an agent’s exploration, learning, and goal generation within its environment. 
-		      <br>Additionally, I am passionate about the intersection of cognitive science and LLMs/VLMs, as well as AI safety, evaluation, and alignment. I am interested in exploring the capabilities of these models through tasks inspired by cognitive science and am currently looking to expand further into this area. I am also eager to contribute to research that ensures these models' safety, alignment with human values, and effective evaluation.
-<br>
+My research is at the intersection of <b>cognitive science and artificial intelligence</b>, with a focus on building AI systems inspired by human cognition — particularly in learning, exploration, and reasoning. I draw on decades of research showing how humans learn rapidly and flexibly about the physical and social world, highlighting capabilities that remain beyond current state-of-the-art AI.
+During my PhD, I aim to use both experimental and computational approaches to study learning, decision-making, and reasoning. My recent projects include investigating <b>automated curriculum learning</b> in humans and machines and exploring how environmental cues—such as time horizon, safety, and controllability—influence an agent’s exploration, learning, and goal generation.
+		      <br>I am also passionate about leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs/VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluation </b>, where I am eager to contribute to research that ensures these models' safety, alignment with human values, and effective evaluation.
 		      <br>
 Feel free to reach out to me - happy to connect!
 
