--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <p>
 My research is at the intersection of <b>cognitive science and artificial intelligence</b>, with a focus on building AI systems inspired by human cognition — particularly in learning, exploration, and reasoning. I draw on decades of research showing how humans learn rapidly and flexibly about the physical and social world, highlighting capabilities that remain beyond current state-of-the-art AI.
 During my PhD, I aim to use both experimental and computational approaches to study learning, decision-making, and reasoning. My recent projects include investigating <b>automated curriculum learning</b> in humans and machines and exploring how environmental cues—such as time horizon, safety, and controllability—influence an agent’s exploration, learning, and goal generation.
-		      <br><br>I am also passionate about leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs/VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluation </b>, where I am eager to contribute to research on these models' safety, alignment with human values, and effective evaluation.
+		      <br><br>I am also passionate about leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs and VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluation</b>, where I am eager to conduct research on models' safety, alignment with human values, and effective evaluation.
 		      <br>
 		      <br>
 Feel free to reach out to me - happy to connect!
