--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <name>Annya Dahmani</name>
               </p>
               <p>
-		       I am a third year PhD student in the Department of Psychology at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am in the Cognition and Developmental areas with a <a href="https://cogsci.berkeley.edu/cogsci.berkeley.edu/graduatedesignatedemphasis"> Designated Emphasis in Cognitive Science.</a> I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
-		      I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">DoD NDSEG Fellowship</a> and a Chancellor’s Fellowship from UC Berkeley.</p>
+		       I am a third year Cognitive Science PhD student at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+		      I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">DoD National Defense Science and Engineering Graduate Fellowship</a> and a Chancellor’s Fellowship from UC Berkeley.</p>
               <p>
                I received my BS in Cognitive Science 
          with a Specialization in Computing from UCLA in June 2022 where I graduated with Departmental Honors and Cum Laude. At UCLA,
-         I mainly worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab</a>. I was funded by the Dean's Award for Life Science Research during my time at UCLA. I also had the opportunity to be a summer intern at Yale University working with Julian Jara-Ettinger in the <a href="https://compdevlab.yale.edu/research.html">Computational Social Cognition Lab</a>.
+         I mainly worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab</a>. I was awarded the Dean's Award for Life Science Research during my time at UCLA. I also had the opportunity to be a summer intern at Yale University working with Julian Jara-Ettinger in the <a href="https://compdevlab.yale.edu/research.html">Computational Social Cognition Lab</a>.
  
 		      
 		
@@ -54,8 +54,8 @@
               <heading>Research</heading>
               <p>
 My research is at the intersection of <b>cognitive science and artificial intelligence</b>, with a focus on building AI systems inspired by human cognition — particularly in learning, exploration, and reasoning. I draw on decades of research showing how humans learn rapidly and flexibly about the physical and social world, highlighting capabilities that remain beyond current state-of-the-art AI.
-During my PhD, I aim to use both experimental and computational approaches to study learning, decision-making, and reasoning. My recent projects include investigating <b>automated curriculum learning</b> in humans and machines and exploring how environmental cues—such as time horizon, safety, and controllability—influence an agent’s exploration, learning, and goal generation.
-		      <br><br>I am also passionate about leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs and VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluation</b>, where I am eager to conduct research on models' safety, alignment with human values, and effective evaluation.
+During my PhD, I aim to use both experimental and computational approaches to study learning, decision-making, and reasoning. My recent projects include investigating <b>automated curriculum learning</b> in humans and machines and exploring how environmental cues influence an agent’s exploration, learning, and goals.
+		      <br><br>I am also passionate about leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs and VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluation methodologies</b>, where I am eager to conduct research on models' safety, alignment with human values, and effective evaluation.
 		      <br>
 		      <br>
 Feel free to reach out to me - happy to connect!
@@ -65,7 +65,7 @@ Feel free to reach out to me - happy to connect!
 		      <br><br>Research keywords: 
 		      <ul>
 		      <li>cognitive science</li>
-		      <li>exploration, learning, reasoning</li>
+		      <li>learning, reasoning</li>
 		      <li>artificial intelligence</li>
 		      <li>cognition in humans and machines</li>
 	</ul>
