--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <p>
                I received my BS in Cognitive Science 
          with a Specialization in Computing from UCLA in June 2022 where I graduated with Departmental Honors and Cum Laude. At UCLA,
-         I mainly worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab</a>. I was awarded the Dean's Award for Life Science Research during my time at UCLA. I also had the opportunity to be a summer intern at Yale University working with Julian Jara-Ettinger in the <a href="https://compdevlab.yale.edu/research.html">Computational Social Cognition Lab</a>.
+         I mainly worked with <a href="https://www.psych.ucla.edu/faculty-page/taogao/"> Tao Gao</a> in the <a href="http://www.stat.ucla.edu/~taogao/"> Visual Intelligence Lab</a> and was awarded the Dean's Award for Life Science Research. I also had the opportunity to be a summer intern at Yale University working with Julian Jara-Ettinger in the <a href="https://compdevlab.yale.edu/research.html">Computational Social Cognition Lab</a>.
  
 		      
 		
