--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Feel free to reach out to me - happy to connect!
 		      <br><br>Research keywords: 
 		      <ul>
 		      <li>cognitive science</li>
-		      <li>learning, reasoning</li>
+		      <li>learning and reasoning</li>
 		      <li>artificial intelligence</li>
 		      <li>cognition in humans and machines</li>
 	</ul>
