--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <p>
 My research is at the intersection of <b>cognitive science and artificial intelligence</b>, with a focus on building AI systems inspired by human cognition — particularly in learning and reasoning. I draw on decades of research showing how humans learn rapidly and flexibly about the physical and social world, highlighting capabilities that remain beyond current state-of-the-art AI.
 
-		      <br><br>I am interested in leveraging insights from cognitive science to evaluate and understand the capabilities of <b>LLMs and VLMs</b>, and I am currently looking to expand further into this area. My interests extend to <b>AI safety, alignment, and evaluations</b>.
+		      <br><br>I’m interested in applying insights from cognitive science to evaluate and better understand the capabilities of language models. My current projects focus on areas such as sycophancy, human–AI complementarity, curriculum learning, and exploration. More broadly, my interests extend to AI safety, alignment, and evaluation.
 		      <br>
 		      <br>
 Feel free to reach out to me - happy to connect!
