--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <name>Annya Dahmani</name>
               </p>
               <p>
-		       I am a third year Cognitive Science PhD student at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR).
+		       I am a 4th year Cognitive Science PhD student at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR).
 		      I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">National Defense Science and Engineering Graduate Fellowship</a> and a Chancellor’s Fellowship from UC Berkeley.</p>
               <p>
                I received my BS in Cognitive Science 
