--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </p>
               <p>
 		       I am a 4th year Cognitive Science PhD student at UC Berkeley, advised by <a href="http://www.gopniklab.berkeley.edu/">Alison Gopnik</a>. I am also affiliated with <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR).
-		      I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">National Defense Science and Engineering Graduate (NDSEG) Fellowship.</a></p>
+		      I am supported by the <a href="https://ndseg.sysplus.com/NDSEG/About/">National Defense Science and Engineering Graduate (NDSEG) Fellowship</a>.</p>
               <p>
                I received my BS in Cognitive Science 
          with a Specialization in Computing from UCLA in June 2022 where I graduated with Departmental Honors and Cum Laude. At UCLA,
